--- a/main.css
+++ b/main.css
@@ -17,7 +17,9 @@
     top: 32vh;
     left: 1vw;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    z-index: -1;
     
+   
 }
 .side-section button{
     /* list-style: none; */
@@ -25,6 +27,12 @@
     border: none;
     background-color: white;
     padding-bottom: 1vh;
+    
+}
+.side-section span:hover{
+    cursor: pointer;
+    color: red;
+    
     
 }
 .show-more{
@@ -82,6 +90,7 @@
     
 }
 
+
 .offer-section span{
     background-color:rgb(204, 12, 57);
     color: white;
@@ -100,4 +109,68 @@
 .big-image img{
     width: 24vh;
     border-radius: 8%;
+}
+
+
+.email{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6.7%;
+    margin-bottom: 20px;
+}
+
+.email-section{
+    font-size: 20px;
+    width: 139%;
+    height: 30px;
+
+}
+.suscribe-container{
+    /* border: 1px solid black; */
+  text-align: center;
+}
+.suscribe-container-1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    width: 8%;
+    height: 36px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.suscribe-text{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+.social-media-container{
+    background-color: black;
+    height: 66px;
+    color: white;
+    display: flex;
+    gap: 23px;
+    justify-content: center;
+    align-items: center;
+}
+.social-media-container div:hover{
+    color: red;
+    cursor: pointer;
+}
+
+.go-top {
+    display: flex;
+    /* text-decoration: none; */
+    color: rgb(6, 6, 6);
+    /* border: 1px solid black; */
+    position: fixed;
+    bottom: 2vh;
+    right: 1vw;
+    background-color: rgb(218, 218, 218);
+    border-radius: 12px;
+    width: 42px;
+}
+.go-top a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
