--- a/nav.css
+++ b/nav.css
@@ -1,14 +1,26 @@
 .navigation-container{
     display: flex;
     background-color: rgb(255, 255, 255);
-    gap: 4%;
+    gap: 3%;
     position: sticky;
     top: 19%;
     padding: 1.5% 0;
+    
+}
+.navigation-container div{
+    border: 1px solid black;
+    background-color: rgb(200, 200, 200);
+    width: 5.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    text-align: center;
 }
 .navigation-container a{
-    color: black;
+    color: rgb(255, 0, 0);
    text-decoration: none;
+   
    
 }
 .navigation-container a:hover{
